data/forge_javadoc/1.9.4/raw/net/minecraft/world/gen/NoiseGeneratorImproved.md
---
title: "NoiseGeneratorImproved"
description: "public class NoiseGeneratorImproved extends NoiseGenerator"
package: "net/minecraft/world/gen"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/world/gen/NoiseGeneratorImproved.html"
sourceType: javadoc
---

# NoiseGeneratorImproved

**Inheritance:** java.lang.Object → net.minecraft.world.gen.NoiseGenerator → net.minecraft.world.gen.NoiseGeneratorImproved

## Class signature

```java
public class NoiseGeneratorImproved extends NoiseGenerator
```

## Constructors

- `NoiseGeneratorImproved()`
- `NoiseGeneratorImproved(java.util.Random p_i45469_1_)`

## Methods

- `double grad(int p_76310_1_, double p_76310_2_, double p_76310_4_, double p_76310_6_)`
- `double grad2(int p_76309_1_, double p_76309_2_, double p_76309_4_)`
- `double lerp(double p_76311_1_, double p_76311_3_, double p_76311_5_)`
- `void populateNoiseArray(double[] noiseArray, double xOffset, double yOffset, double zOffset, int xSize, int ySize, int zSize, double xScale, double yScale, double zScale, double noiseScale)`

## Fields

- `double xCoord`
- `double yCoord`
- `double zCoord`
